--- a/PedanticCoding.html
+++ b/PedanticCoding.html
@@ -13076,16 +13076,18 @@ div#notebook {
 
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[20]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">fries_and_drinks</span> <span class="o">=</span> <span class="kc">False</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">fries_and_drinks</span> <span class="o">=</span> <span class="kc">True</span>
 <span class="n">sundae</span> <span class="o">=</span> <span class="kc">False</span>
 
 <span class="k">if</span> <span class="p">(</span><span class="n">fries_and_drinks</span><span class="p">):</span>
-    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot; Cheese Burger Deluxe with Fries and Drinks &quot;</span><span class="p">)</span>
-<span class="n">eli</span>
+        <span class="nb">print</span><span class="p">(</span><span class="s2">&quot; Cheese Burger Deluxe with Fries and Drinks &quot;</span><span class="p">)</span>
+<span class="k">elif</span> <span class="p">(</span><span class="n">sundae</span><span class="p">):</span>
     <span class="nb">print</span><span class="p">(</span><span class="s2">&quot; Cheese Burger Deluxe with sundae &quot;</span><span class="p">)</span>
+<span class="k">else</span><span class="p">:</span>
+    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot; Cheese Burger Deluxe &quot;</span><span class="p">)</span>
 </pre></div>
 
     </div>
@@ -13102,7 +13104,7 @@ div#notebook {
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre> Cheese Burger Deluxe with sundae 
+<pre> Cheese Burger Deluxe with Fries and Drinks 
 </pre>
 </div>
 </div>
